--- a/assets/scss/modules/_navigation.scss
+++ b/assets/scss/modules/_navigation.scss
@@ -1,10 +1,11 @@
 .nav-trigger {
   position: absolute;
   clip: rect(0, 0, 0, 0);
-  &:checked ~ .site-navigation {
+  &:checked ~ .app-wrapper .site-navigation {
     @include mq-max(768) {
       position: fixed;
-      transform: translate(0,0);
+      transform: translateX(-$mobile_nav_width);
+      display: block;
     }
   }
   &:checked ~ .app-wrapper {
@@ -32,6 +33,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  display: none;
   z-index: 1;
   height: 100%;
   background: $black;
@@ -57,9 +59,11 @@
   }
 
   @include mq(768) {
-    position: absolute;
-    top: 16px;
-    left: 170px;
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    padding-top: 0.8em;
+    white-space: nowrap;
     z-index: 3;
     color: inherit;
     background: transparent;
