--- a/assets/scss/pages/_sign_in.scss
+++ b/assets/scss/pages/_sign_in.scss
@@ -24,7 +24,7 @@
 
 .sign-in-form {
   display: inline-block;
-  max-width: 25.5em;
+  max-width: 100%;
   margin-bottom: 0.5em;
 }
 
